# fairdm-plugin

./: .gitignore  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  codecov.yml  cookiecutter.json  pyproject.toml
.github/: README.md
.github/workflows/: test-template.yml
hooks/: post_gen_project.py
tests/: README.md  conftest.py  test_file_content.py  test_generation.py  test_naming_conventions.py  test_plugin_functionality.py
{{cookiecutter.plugin_slug}}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml
{{cookiecutter.plugin_slug}}/.github/: dependabot.yml  pull_request_template.md
{{cookiecutter.plugin_slug}}/.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
{{cookiecutter.plugin_slug}}/.github/instructions/: copilot.instructions.md  testing.instructions.md
{{cookiecutter.plugin_slug}}/.github/workflows/: tests.yml
{{cookiecutter.plugin_slug}}/tests/: README.md  conftest.py  test_apps.py  test_plugins.py
{{cookiecutter.plugin_slug}}/{{cookiecutter.plugin_slug}}/: __init__.py  apps.py  plugins.py  settings.py
{{cookiecutter.plugin_slug}}/{{cookiecutter.plugin_slug}}/templates/{{cookiecutter.plugin_slug}}/: {{cookiecutter.plugin_slug}}.html
