[tool.poetry]
name = "{{ cookiecutter.plugin_slug|replace('_', '-') }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.plugin_short_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.license }}"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.plugin_slug }}"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.plugin_slug }}"
keywords = ["django", "fairdm", "plugin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: {{ cookiecutter.license }} License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
django = "^5.0"
{% if cookiecutter.use_waffle == "yes" %}django-waffle = "*"
{% endif %}
# Add your plugin's dependencies here
# Example:
# requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
fairdm-dev-tools = {git = "https://github.com/FAIR-DM/dev-tools"}
fairdm = {git = "https://github.com/FAIR-DM/fairdm", rev = "development"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
addopts = "--reuse-db --nomigrations"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["{{ cookiecutter.plugin_slug }}"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
skip_empty = true
show_missing = true
precision = 2

[tool.ruff]
target-version = "py{{ cookiecutter.python_version.replace('.', '') }}"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S101", "S105"]  # Allow assert and hardcoded passwords in tests

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
plugins = ["mypy_django_plugin.main"]
django_settings_module = "config.settings"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
